# fritz_exporter

./: .coveragerc  .dockerignore  .flake8  .gitignore  .mcp.json  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  Pipfile  README.md  docker-compose.debug.yml  docker-compose.yml  fritz_export_helper.py  fritz_export_http_helper.py  fritz_exporter.py  fritzbox_exporter.py  fritzbox_exporter.service  git-conventional-commits.yaml  pyproject.toml  release-please-config.json  requirements.txt  sonar-project.properties  update-version-files.js
.claude/: settings.json
.git-hooks/: commit-msg
.github/: dependabot.yml
.github/actions/setenv/: action.yaml
.github/scripts/: check_python_release.py
.github/variables/: workflow_envvars
.github/workflows/: build-and-push-develop.yaml  build-and-push-release.yaml  build-and-push-tagged-release.yaml  build-pre-release.yaml  build-release.yaml  build-trunk.yaml  build_release.yaml  buildx_text.yaml  check-PR-labels-master.yaml  check-conventional-commits.yaml  python-release-check.yaml  release.yaml  run-tests.yaml  run_tests.yaml  sync-helm-chart-version.yaml  tag-release.yaml  update-versions.yaml
.github/workflows/_attic/: check-pr-labels.yaml
.github/workflows/_attic2/: build-release.yaml  build-trunk.yaml
docs/: BUILD.md  CODING.md  FritzAPI.txt  RUNNING.md  building.rst  coding.rst  conf.py  configuration.rst  docker-compose.debug.yml  docker-compose.hub.yml  docker-compose.local-file.yml  docker-compose.local.yml  docker-compose.yml  docker-images.rst  fritz-exporter.service  fritz-exporter.yml  fritzbox_exporter.service  helping_out.rst  index.rst  quickstart.rst  running.rst  upgrading.rst
docs/compose-with-prometheus/: docker-compose.yml  prometheus.yml
docs/compose-with-prometheus/prometheus/: prometheus.yml
docs/helm/fritz-exporter/: Chart.yaml  values.yaml
docs/helm/fritz-exporter/templates/: deployment.yaml  secret.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
docs/helm/fritz-exporter/templates/tests/: test-connection.yaml
fritz-mixin/: README.md  jsonnetfile.lock.json  main.jsonnet
fritz-mixin/dashboards/: fritz-exporter-all-in-one.libsonnet
fritzexporter/: __init__.py  __main__.py  _version.py  action_blacklists.py  config.py  data_donation.py  exceptions.py  fritz_aha.py  fritzcapabilities.py  fritzcollector.py  fritzdevice.py  fritzmetric.py
fritzexporter/config/: __init__.py  config.py  exceptions.py
fritzexporter/http_connection/: __init__.py  connection.py  exceptions.py
fritzexporter/prommetrics/: prommetrics.py
grafana-dashboards/: fritz-exporter-all-in-one.json
helm/fritz-exporter/: Chart.yaml  pullsecret.yaml  values-orbital.yaml  values.yaml
helm/fritz-exporter/templates/: _helpers.tpl  deployment.yaml  secret.yaml  servicemonitor.yaml
misc/grafana/: FritzExporter_13983.json  FritzExporter_Dash_17751.json
tests/: __init__.py  fc_services_mock.py  test_config.py  test_datadonation.py  test_fritzcapabilities.py  test_fritzdevice.py  test_main.py
tests/conffiles/: config_with_timeout.yaml  emptydevices.yaml  invalidport.yaml  malformeddevice.yaml  namesnotunique.yaml  nodevices.yaml  password.txt  password_file.yaml  validconfig.yaml
