[project]
name = "fritzexporter"
authors = [{name = "pdreker", email = "patrick@dreker.de"}]
dynamic = ["version", "description"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov-branch --cov . --cov-report xml --cov-config .coveragerc"
testpaths = [
    "tests",
]

[tool.poetry]
name = "fritz-exporter"
version = "2.2.1"
description = "Prometheus exporter for AVM Fritz! Devices"
authors = ["Patrick Dreker <patrick@dreker.de>"]
license = "Apache 2.0"
readme = "README.md"
homepage = "https://github.com/pdreker/fritz_exporter"
repository = "https://github.com/pdreker/fritz_exporter"
documentation = "https://fritz-exporter.readthedocs.io"
keywords = ["prometheus", "fritz", "router", "grafana"]
classifiers = [
    "Development Status :: 6 - Mature",
    "Environment :: Console",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: System :: Monitoring"
]
include = [ "LICENSE.md" ]
packages = [{include = "fritzexporter"}]

[tool.poetry.scripts]
fritzexporter = 'fritzexporter:__main__'

[tool.poetry.dependencies]
python = "^3.10"
prometheus-client = ">=0.6.0"
fritzconnection = ">=1.0.0"
pyyaml = "*"
requests = "*"
attrs = "^22.2.0"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
pytest = "*"
pytest-mock = "*"
types-pyyaml = "*"
types-requests = "*"
flake8 = "^5.0.4"
mypy = "^0.971"
coverage = "^6.4.4"
pytest-cov = "^3.0.0"
flake8-bugbear = "^22.9.23"
flake8-assertive = "^2.1.0"
flake8-comprehensions = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
