[project]
name = "fritz-exporter"
version = "3.2.0"
description = "Prometheus exporter for AVM Fritz! Devices"
authors = [{name = "Patrick Dreker", email = "patrick@dreker.de"}]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/pdreker/fritz_exporter"
repository = "https://github.com/pdreker/fritz_exporter"
documentation = "https://fritz-exporter.readthedocs.io"
keywords = ["prometheus", "fritz", "router", "grafana"]
classifiers = [
    "Development Status :: 6 - Mature",
    "Environment :: Console",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: System :: Monitoring",
]
requires-python = ">=3.14"
dependencies = [
    "prometheus-client>=0.6.0",
    "fritzconnection>=1.0.0",
    "pyyaml",
    "requests",
    "attrs>=22.2,<27.0",
    "defusedxml>=0.7.1,<0.8",
]

[project.urls]
Homepage = "https://github.com/pdreker/fritz_exporter"
Repository = "https://github.com/pdreker/fritz_exporter"
Documentation = "https://fritz-exporter.readthedocs.io"

[project.scripts]
fritzexporter = "fritzexporter.__main__:main"

[dependency-groups]
dev = [{include-group = "lint"}, {include-group = "test"}]
lint = ["ruff>=0.1.7", "ty"]
test = [
    "pytest",
    "pytest-mock",
    "pytest-cov",
    "coverage",
    "types-pyyaml",
    "types-requests",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fritzexporter"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov-branch --cov=fritzexporter --cov-report=xml"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
relative_files = true
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py314"
extend-exclude = [
    "tests",
    "docs",
]

[tool.ruff.lint]
select = [
    "E", "W", # PyCodeStyle
    "F", # PyFlakes
    "C90", # McCabe (Function Complexity)
    "I", # ISort
    "N", # PEP8 Naming Conventions
    # "D", # PyDocStyle
    "UP", # pyupgrade
    "YTT", # flake8-2020
    "ANN", # flake8-annotations
    "ASYNC", # flake8-async
    "S", # flake8-bandit
    "BLE", # blind exceptions
    "FBT", # boolean traps
    "B", # bugbear
    "A", # flake8-builtins
    "COM", # flake8-commas
    "C4", # flake8-comprehensions
    "DTZ", # naive datetime objects
    "T10", # debugger imports
    "EM", # error message formatting
    "FA", # future annotations
    "ISC", # implicit string concatenation
    "G", # logging format
    "INP", # implicit namespace packages
    "PIE", # various anti-patterns
    "T20", # print() calls
    "PT", # pytest style
    "Q", # quotes
    "RSE", # raise syntax
    "RET", # return values
    "SLF", # private attribute access
    "SLOT", # __slots__
    "SIM", # simplify
    "INT", # gettext
    "ARG", # unused arguments
    "PTH", # pathlib
    "TD", # TODO comments
    "FIX", # FIXME/XXX
    "PGH", # pygrep-hooks
    "PL", # PyLint
    "TRY", # try/except anti-patterns
    "FLY", # join vs f-strings
    "PERF", # performance
    "FURB", # modernize
    "LOG", # logging
    "RUF", # ruff
]
ignore = ["E203", "COM812", "ISC001", "ANN204"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ty.environment]
python-version = "3.14"

[tool.ty.rules]
possibly-unresolved-reference = "error"
unused-ignore-comment = "warn"
